<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_moyoapp_Color"
    tools:context=".bpreadindsFragment">

    <TextView
        android:id="@+id/textView_bpreadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BP Readings"
        android:textColor="@color/text_white"
        android:fontFamily="@font/rockoultraflf"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/textView_bpreadings"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/systolic_diastolic_bpreadings"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/montserratmedium"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Systolic/Diastolic"
                android:inputType="number"
                android:textColorHint="@color/text_white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart_rate_bpreadings"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/montserratmedium"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Heart Rate"
                android:textColorHint="@color/text_white"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_bpreadings"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/montserratmedium"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Normal/Abnormanl"
                android:textColorHint="@color/text_white"/>




        </LinearLayout>




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>