<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_moyoapp_Color"
    tools:context="fragments.MyNewDoctorFragment">

    <LinearLayout
        android:id="@+id/linearlayout_doctor_infor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_doctor"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_margin="16dp"
            android:background="@drawable/circular_background"
            android:src="@drawable/ic_doctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearlayout_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_doctor">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rockoultraflf"
                android:text="Dr.Who"
                android:textColor="@color/text_white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rockoultraflf"
                android:text="Cardiologist M.D"
                android:textColor="@color/text_white"
                android:textSize="20sp" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_doctor_infor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:weightSum="2"
            android:layout_weight="1"
            android:background="@drawable/linearlayout_customborder"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/rockoultraflf"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nairobi"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/rockoultraflf"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:background="@drawable/linearlayout_customborder"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/rockoultraflf"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0707070707"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/rockoultraflf"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:background="@drawable/linearlayout_customborder"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_call_mydoctor"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_call_doctor"/>

            <ImageView
                android:id="@+id/img_message_mydoctor"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_message_doctor"/>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:background="@drawable/linearlayout_customborder"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/rockoultraflf"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="drwho@gmailcom"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/rockoultraflf"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:background="@drawable/linearlayout_customborder"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clinic_hospital"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/rockoultraflf"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="AGA Khan"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:fontFamily="@font/rockoultraflf"/>




        </LinearLayout>








    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>